--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -23,7 +23,7 @@
   box-sizing: border-box;
 }
 
- html {
+ html, body, main, .splash {
    height: 100%;
    min-height: 600px;
    min-width: 375px;
@@ -33,4 +33,13 @@
 a {
   text-decoration: none;
   color: green;
+}
+
+input {
+  border:none;
+  background-image:none;
+  background-color:transparent;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
 }
