--- a/app/assets/stylesheets/loginForm.scss
+++ b/app/assets/stylesheets/loginForm.scss
@@ -1,9 +1,20 @@
+.splash {
+  padding-top: 200px;
+  background-color: black;
+  box-sizing: border-box;
+}
+
 .login-form-container {
   display: flex;
+  flex-direction: column;
   margin: 0 auto;
   align-items: center;
   justify-content: center;
-  margin-top: 100px;
+}
+
+.login-form-container h1 {
+  font-size: 2em;
+  color: white;
 }
 
 .login-form-container div {
@@ -13,4 +24,13 @@
   font-size: 1.2em;
   display: flex;
   flex-direction: column;
+}
+
+.login-form input, button {
+  background-color: rgb(51,51,51);
+  color: rgb(130,158,160);
+  border-radius: 5px;
+  height: 40px;
+  font-size: 1.1em;
+  padding-left: 5px;
 }
