--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,7 +17,7 @@
  @import "base/grid.scss";*/
 
 /*// Core*/
-/*@import "stylesheets/base/colors.scss";*/
+@import "colors.scss";
 
 * {
   box-sizing: border-box;
