--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,29 +1,39 @@
+@import "base/colors.scss";
+@import "base/font.scss";
+
 .header {
   width: 100%;
   height: 40px;
   background-color: black;
-  color: white;
+  color: $gray;
+  font-size: $medium;
   align-items: center;
   display: flex;
 }
 
 .title {
-  text-align: left;
+  text-align: center;
   flex: 7;
-  font-size: 1.2em;
 }
 
 .account-nav {
+  align-items: center;
   display: flex;
   text-align: right;
   flex: 3;
 }
 
 .header-name {
-  flex: 3;
+  flex: 6;
 }
 
 .header-button {
   margin-left: 10px;
   flex: 1;
+}
+
+.header-button button {
+  font-size: $small;
+  height: 30px;
+  border-radius: 25px;
 }
