--- a/app/assets/stylesheets/loginForm.scss
+++ b/app/assets/stylesheets/loginForm.scss
@@ -1,3 +1,6 @@
+/*// Core*/
+@import "base/colors.scss";
+
 .splash {
   background: url("/splash.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
@@ -35,8 +38,8 @@
 }
 
 .login-form input, button {
-  background-color: rgb(51,51,51);
-  color: rgb(190,183,183);
+  background-color: $lightgray;
+  color: $gray;
   border-radius: 5px;
   height: 40px;
   font-size: 1.1em;
@@ -48,5 +51,9 @@
 }
 
 .login-form p {
+  margin-top: 15px;
+}
+
+.login-form li {
   margin-top: 15px;
 }
