--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -9,27 +9,45 @@
   font-size: $medium;
   align-items: center;
   display: flex;
+  background: #000000;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to bottom, #434343, #000000);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to bottom, #434343, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+
 }
 
 .title {
   text-align: center;
-  flex: 7;
+  flex: 3;
+  color: #cbb4d4;
+  font-weight: 800;
+  font-size: $big;
+}
+
+.midheader {
+  flex: 6;
 }
 
 .account-nav {
   align-items: center;
   display: flex;
-  text-align: right;
+  text-align: center;
   flex: 3;
 }
 
 .header-name {
   flex: 6;
+  text-align: right;
 }
 
 .header-button {
   margin-left: 10px;
-  flex: 1;
+  flex: 2;
+}
+
+.button {
+  text-align: center;
+  margin: 0 10px;
 }
 
 .header-button button {
