--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -5,44 +5,60 @@
   width: 100%;
   height: 40px;
   background-color: black;
-  color: $gray;
+  color: white;
   font-size: $medium;
   align-items: center;
   display: flex;
   background: #000000;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to bottom, #434343, #000000);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to bottom, #434343, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-
 }
 
 .title {
   text-align: center;
   flex: 3;
-  color: #cbb4d4;
+  color: $purple;
   font-weight: 800;
   font-size: $big;
 }
 
 .midheader {
+  padding: 5px;
+  display: flex;
+  align-items: middle;
+  text-align: right;
   flex: 6;
 }
 
-.account-nav {
-  align-items: center;
-  display: flex;
-  text-align: center;
+.rightheader {
+  height: 100%;
   flex: 3;
 }
 
+.account-nav {
+  text-align: right;
+  align-items: middle;
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  height: 100%;
+}
+
 .header-name {
-  flex: 6;
+  margin: 0 10px;
   text-align: right;
 }
 
 .header-button {
-  margin-left: 10px;
-  flex: 2;
+  text-align: center;
+  height: 100%;
+  width: 40px;
+  margin: 0 10px;
+}
+
+.header-button:hover {
+
+  color: red;
 }
 
 .button {
