--- a/app/assets/stylesheets/loginForm.scss
+++ b/app/assets/stylesheets/loginForm.scss
@@ -1,5 +1,6 @@
 /*// Core*/
 @import "base/colors.scss";
+@import "base/font.scss";
 
 .splash {
   background: url("/splash.jpg") no-repeat center center fixed;
@@ -24,7 +25,7 @@
 }
 
 .login-form-container h1 {
-  font-size: 2em;
+  font-size: $big;
 }
 
 .login-form-container div {
