--- a/app/assets/stylesheets/right_sidebar.scss
+++ b/app/assets/stylesheets/right_sidebar.scss
@@ -5,7 +5,9 @@
   height: 100%;
   background-color: rgb(18,18,18);
   color: white;
-  font-size: 16px;
+  font-size: 15px;
+  overflow-y: scroll;
+  overflow-x: visible !important;
 }
 
 .search {
@@ -16,29 +18,33 @@
   align-items: center;
   display: flex;
   justify-content: flex-start;
+  flex:1;
 }
 
 .searchbar label {
   text-align: left;
   font-size: $small;
   flex: 1;
+  padding-left: 10px;
+
 }
 
 .searchbar i {
-
 }
 
 .searchbar input {
   flex: 9;
   width: 70%;
   height: 30px;
-  border-radius: 10px;
+  border-radius: 15px;
   font-size: $small;
   color: $lightgray;
   background-color: white;
   margin: 15px;
   padding-left: 5px;
   outline: none;
+  text-indent: 20px;
+
 }
 
 .search-results {
@@ -49,7 +55,7 @@
   font-weight: 800;
 }
 
-.srow {
+.srow, .srow2 {
   padding-left: 10px;
   width: 100%;
   display: flex;
@@ -73,4 +79,67 @@
   color: $purple;
   text-align: center;
   flex: 1
+}
+
+.addicon:hover {
+  color: green;
+}
+
+.tooltip {
+    position: relative;
+    display: inline-block;
+}
+
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 150%;
+    left: 50%;
+    margin-left: -60px;
+}
+
+.tooltip .tooltiptext::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: black transparent transparent transparent;
+}
+
+.tooltip:hover .tooltiptext {
+    transition: opacity 2.5s;
+    opacity: 1;
+}
+
+
+::-webkit-scrollbar {
+   width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+   -webkit-border-radius: 10px;
+   border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+   -webkit-border-radius: 10px;
+   border-radius: 10px;
+   background: $lightgray;
+   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+}
+::-webkit-scrollbar-thumb:window-inactive {
+ background: rgba(255,0,0,0.4);
 }
