--- a/app/assets/stylesheets/mid/new_playlist.scss
+++ b/app/assets/stylesheets/mid/new_playlist.scss
@@ -1,37 +1,65 @@
-.modal {
-    display: none; /* Hidden by default */
-    z-index: 1; /* Sit on top */
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
+@import "base/font.scss";
+@import "base/colors.scss";
 
-/* Modal Content */
-.modal-content {
-    background-color: #fefefe;
-    margin: auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-}
-
-/* The Close Button */
-.close {
-    color: #aaaaaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-.newplaylist {
+.new-playlist, .new-playlist-form {
   height: 100%;
   width: 100%;
+  color: white;
+  text-align: center;
+  font-size: $big;
+}
+//
+.new-playlist-form h3 {
+  text-align: left;
+}
+
+.new-playlist-form input {
+  font-size: $big;
+  width: 100%;
+  max-width: 600px;
+}
+
+.new-playlist-form {
+  padding-top: 75px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  width: 80%;
+  margin: 0 auto;
+  // position: relative;
+  // top: 50%;
+  // transform: translateY(-50%);
+}
+
+.user-image {
+  flex: 1;
+}
+
+.user-image img {
+  width: 35px;
+  height: 35px;
+  border-radius: 25px;
+}
+
+.user-name {
+  margin-left: 5px;
+  padding: 10px 0;
+  font-size: $medium;
+  text-align: left;
+  flex: 9;
+}
+
+.user-row {
+  height: 40px;
+  width: 80%;
+  height: 80px;
+  display: flex;
+  align-items: center;
+}
+
+.user-search-results {
+  overflow-y: scroll;
+  width: 80%;
+  margin-top: 20px;
 }
