Progress on New Playlist

--- a/app/assets/stylesheets/mid/mid_content.scss
+++ b/app/assets/stylesheets/mid/mid_content.scss
@@ -10,8 +10,9 @@
 .start {
   text-align: center;
   font-size: $big;
-  color: $gray;
-  width: 100%;
+  color: white;
+  width: 80%;
+  margin: 0 auto;
   position: relative;
   top: 50%;
   transform: translateY(-50%);
