--- a/app/assets/stylesheets/mid/mid_content.scss
+++ b/app/assets/stylesheets/mid/mid_content.scss
@@ -3,7 +3,13 @@
 
 .mid {
   height: 100%;
-  background: rgb(24,24,24);
+  // background: rgb(24,24,24);
+  // background: url("/main4.jpg") no-repeat center center fixed;
+  // -webkit-background-size: cover;
+  // -moz-background-size: cover;
+  // background-size: cover;
+
+  background-color: black;
 }
 
 
