--- a/app/assets/stylesheets/mid/new_playlist.scss
+++ b/app/assets/stylesheets/mid/new_playlist.scss
@@ -19,7 +19,8 @@
 }
 
 #members {
-  padding: 2px;
+  padding: 10px 0 0 10px;
+  float: left;
   width: 100%;
   min-height: 60px;
   margin-bottom: 10px;
@@ -40,7 +41,7 @@
 
 #members img {
   float: left;
-  margin: 0 5px;
+  margin: 5px;
   height: 40px;
   width: 40px;
 }
@@ -107,4 +108,74 @@
 .user-search-results {
 
   width: 100%;
+}
+
+.formsubmit {
+  color: white;
+  height: 100px !important;
+  width: 100px !important;
+}
+
+
+// BUTTON
+
+:root {
+    --bg: #3C465C;
+    --primary: white;
+    --solid: #fff;
+    --btn-w: 5em;
+    --dot-w: calc(var(--btn-w)*.2);
+    --tr-X: calc(var(--btn-w) - var(--dot-w));
+}
+* {box-sizing: border-box;}
+*:before, *:after {box-sizing: border-box;}
+
+.btn {
+    position: relative;
+    margin: 0 auto;
+    width: var(--btn-w);
+    color: var(--primary);
+    border: .15em solid var(--primary);
+    border-radius: 5em;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: $medium;
+    line-height: 2em;
+    cursor: pointer;
+    margin-bottom: 20px;
+}
+.dot {
+    content: '';
+    position: absolute;
+    top: 0;
+    width: var(--dot-w);
+    height: 100%;
+    border-radius: 100%;
+    transition: all 300ms ease;
+    display: none;
+}
+.dot:after {
+    content: '';
+    position: absolute;
+    left: calc(50% - .4em);
+    top: -.4em;
+    height: .8em;
+    width: .8em;
+    background: var(--primary);
+    border-radius: 1em;
+    border: .25em solid var(--solid);
+    box-shadow: 0 0 .7em var(--solid),
+                0 0 2em var(--primary);
+}
+.btn:hover .dot,
+.btn:focus .dot {
+    animation: atom 2s infinite linear;
+    display: block;
+}
+@keyframes atom {
+    0% {transform: translateX(0) rotate(0);}
+    30%{transform: translateX(var(--tr-X)) rotate(0);}
+    50% {transform: translateX(var(--tr-X)) rotate(180deg);}
+    80% {transform: translateX(0) rotate(180deg);}
+    100% {transform: translateX(0) rotate(360deg);}
 }
