--- a/app/assets/stylesheets/right_sidebar.scss
+++ b/app/assets/stylesheets/right_sidebar.scss
@@ -28,8 +28,6 @@
 
 }
 
-.searchbar i {
-}
 
 .searchbar input {
   flex: 9;
@@ -79,7 +77,7 @@
 .addicon {
   color: $purple;
   text-align: center;
-  flex: 1
+  flex: 1;
 }
 
 .addicon:hover {
