--- a/app/assets/stylesheets/left/left_sidebar.scss
+++ b/app/assets/stylesheets/left/left_sidebar.scss
@@ -5,26 +5,37 @@
   height: 100%;
   background-color: rgb(18,18,18);
   color: white;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .prow {
   width: 100%;
   height: 50px;
   display: flex;
+  justify-content: flex-start;
   align-items: center;
   padding-left: 10px;
   border-bottom: white 0.5px solid;
+  font-size: $medium;
 }
 
-.playlist-item {
-  width: 100%;
-  height: 100%;
-  display: flex;
+.playlist-title, .playlist-members, .playlist-info {
   align-items: center;
-  text-align: center;
+}
 
-  font-size: $medium;
+.playlist-title {
+  flex: 4
+}
+
+.playlist-members {
+  font-size: $small;
+  text-align: left;
+  flex: 1;
+}
+
+.playlists-info {
+  flex: 1;
+  text-align: left;
 }
 
 .prow:hover {
