--- a/app/assets/stylesheets/right_sidebar.scss
+++ b/app/assets/stylesheets/right_sidebar.scss
@@ -11,6 +11,8 @@
 
 .search {
   height: 100%;
+  overflow-y: auto;
+  overflow-x: visible !important;
 }
 
 .searchbar {
@@ -46,8 +48,7 @@
 
 .search-results {
   width: 100%;
-  overflow-y: scroll;
-  overflow-x: visible !important;
+
 }
 
 .head {
@@ -118,27 +119,4 @@
 .tooltip:hover .tooltiptext {
     transition: opacity 2.5s;
     opacity: 1;
-}
-
-
-::-webkit-scrollbar {
-   width: 10px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0);
-   -webkit-border-radius: 10px;
-   border-radius: 10px;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-   -webkit-border-radius: 10px;
-   border-radius: 10px;
-   background: $lightgray;
-   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
-}
-::-webkit-scrollbar-thumb:window-inactive {
- background: rgba(255,0,0,0.4);
 }
