--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,4 +1,5 @@
 <script src="https://use.fontawesome.com/f58ff23766.js"></script>
+<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
 
 <script id="bootstrap-current-user" type="text/javascript">
   <% if logged_in? %>
