--- a/app/assets/stylesheets/base/colors.scss
+++ b/app/assets/stylesheets/base/colors.scss
@@ -1,7 +1,11 @@
-$purple: #cbb4d4;
+// $purple: #cbb4d4;
+$purple: #DBBBF5;
 $pink: #da7071;
-$green: 065143;
+$green: #83B692;
 $lightgreen: #70B77E;
 $lightblue: #129490;
-$gray: rgb(190,183,183);
+$gray: #DDF0FF;
+// $gray: rgb(190,183,183);
 $lightgray: rgb(51,51,51);
+$white: white;
+$red: #CE5374;
