--- a/app/assets/stylesheets/base/font.scss
+++ b/app/assets/stylesheets/base/font.scss
@@ -1,3 +1,5 @@
 $big: 36px;
 $medium: 24px;
 $small: 16px;
+
+$font: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
