--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -3,7 +3,8 @@
 
 .header {
   width: 100%;
-  height: 40px;
+  height: 45px;
+  vertical-align: middle;
   background-color: black;
   color: white;
   font-size: $medium;
@@ -19,7 +20,8 @@
   flex: 3;
   color: $purple;
   font-weight: 800;
-  font-size: $big;
+  font-size: 35px;
+  line-height: 35px;
 }
 
 .midheader {
@@ -36,8 +38,9 @@
 }
 
 .account-nav {
+  padding: 5px 0;
   text-align: right;
-  align-items: middle;
+  align-items: baseline;
   display: flex;
   justify-content: flex-end;
   width: 100%;
@@ -57,8 +60,7 @@
 }
 
 .header-button:hover {
-
-  color: red;
+  color: $red;
 }
 
 .button {
