--- a/app/assets/stylesheets/mid/mid_content.scss
+++ b/app/assets/stylesheets/mid/mid_content.scss
@@ -3,18 +3,13 @@
 
 .mid {
   height: 100%;
-  // background: rgb(24,24,24);
-  // background: url("/main4.jpg") no-repeat center center fixed;
-  // -webkit-background-size: cover;
-  // -moz-background-size: cover;
-  // background-size: cover;
-
   background-color: black;
 }
 
 
 .start {
   text-align: center;
+  line-height: normal;
   font-size: $big;
   color: white;
   width: 80%;
