--- a/app/assets/stylesheets/mid/new_playlist.scss
+++ b/app/assets/stylesheets/mid/new_playlist.scss
@@ -4,7 +4,7 @@
 .new-playlist, .new-playlist-form {
   height: 100%;
   width: 100%;
-  color: white;
+  color: $white;
   text-align: center;
   font-size: $big;
 
@@ -110,72 +110,82 @@
   width: 100%;
 }
 
-.formsubmit {
-  color: white;
+input.formsubmit {
+  vertical-align: center;
+  padding-top: 5px;
+  color: $white;
+  margin-bottom: 20px;
+  border: 2px solid $white;
   height: 100px !important;
   width: 100px !important;
+}
+
+input.formsubmit:hover {
+  font-weight: 800;
 }
 
 
 // BUTTON
 
-:root {
-    --bg: #3C465C;
-    --primary: white;
-    --solid: #fff;
-    --btn-w: 5em;
-    --dot-w: calc(var(--btn-w)*.2);
-    --tr-X: calc(var(--btn-w) - var(--dot-w));
-}
-* {box-sizing: border-box;}
-*:before, *:after {box-sizing: border-box;}
 
-.btn {
-    position: relative;
-    margin: 0 auto;
-    width: var(--btn-w);
-    color: var(--primary);
-    border: .15em solid var(--primary);
-    border-radius: 5em;
-    text-transform: uppercase;
-    text-align: center;
-    font-size: $medium;
-    line-height: 2em;
-    cursor: pointer;
-    margin-bottom: 20px;
-}
-.dot {
-    content: '';
-    position: absolute;
-    top: 0;
-    width: var(--dot-w);
-    height: 100%;
-    border-radius: 100%;
-    transition: all 300ms ease;
-    display: none;
-}
-.dot:after {
-    content: '';
-    position: absolute;
-    left: calc(50% - .4em);
-    top: -.4em;
-    height: .8em;
-    width: .8em;
-    background: var(--primary);
-    border-radius: 1em;
-    border: .25em solid var(--solid);
-    box-shadow: 0 0 .7em var(--solid),
-                0 0 2em var(--primary);
-}
-.btn:hover .dot,
-.btn:focus .dot {
-    animation: atom 2s infinite linear;
-    display: block;
-}
-@keyframes atom {
-    0% {transform: translateX(0) rotate(0);}
-    30%{transform: translateX(var(--tr-X)) rotate(0);}
-    50% {transform: translateX(var(--tr-X)) rotate(180deg);}
-    80% {transform: translateX(0) rotate(180deg);}
-    100% {transform: translateX(0) rotate(360deg);}
-}
+
+// :root {
+//     --bg: #3C465C;
+//     --primary: $white;
+//     --solid: #fff;
+//     --btn-w: 5em;
+//     --dot-w: calc(var(--btn-w)*.2);
+//     --tr-X: calc(var(--btn-w) - var(--dot-w));
+// }
+// * {box-sizing: border-box;}
+// *:before, *:after {box-sizing: border-box;}
+//
+// .btn {
+//     position: relative;
+//     margin: 0 auto;
+//     width: var(--btn-w);
+//     color: var(--primary);
+//     border: .15em solid var(--primary);
+//     border-radius: 5em;
+//     text-transform: uppercase;
+//     text-align: center;
+//     font-size: $medium;
+//     line-height: 2em;
+//     cursor: pointer;
+//     margin-bottom: 20px;
+// }
+// .dot {
+//     content: '';
+//     position: absolute;
+//     top: 0;
+//     width: var(--dot-w);
+//     height: 100%;
+//     border-radius: 100%;
+//     transition: all 300ms ease;
+//     display: none;
+// }
+// .dot:after {
+//     content: '';
+//     position: absolute;
+//     left: calc(50% - .4em);
+//     top: -.4em;
+//     height: .8em;
+//     width: .8em;
+//     background: var(--primary);
+//     border-radius: 1em;
+//     border: .25em solid var(--solid);
+//     box-shadow: 0 0 .7em var(--solid),
+//                 0 0 2em var(--primary);
+// }
+// .btn:hover .dot,
+// .btn:focus .dot {
+//     animation: atom 2s infinite linear;
+//     display: block;
+// }
+// @keyframes atom {
+//     0% {transform: translateX(0) rotate(0);}
+//     30%{transform: translateX(var(--tr-X)) rotate(0);}
+//     50% {transform: translateX(var(--tr-X)) rotate(180deg);}
+//     80% {transform: translateX(0) rotate(180deg);}
+//     100% {transform: translateX(0) rotate(360deg);}
+// }
