--- a/app/assets/stylesheets/mid/playlist-detail.scss
+++ b/app/assets/stylesheets/mid/playlist-detail.scss
@@ -2,5 +2,85 @@
 @import "base/colors.scss";
 
 .playlist-detail {
-  color: white;
+  color: $white;
+}
+
+//TITLE PART
+
+.playlist-detail-title {
+  margin-top: 10px;
+  width: 100%;
+  text-align: center;
+  font-size: $big;
+}
+
+.playlist-detail-uploader {
+  margin-top: 10px;
+  padding-bottom: 10px;
+  text-align: center;
+  border-bottom: rgb(50,50,50) 1px solid;
+}
+
+#playlist-title-box p {
+  width: 100%;
+  display: block;
+  text-align: center;
+  color: $white;
+}
+
+//INDIVIDUAL SONGS
+
+.playlist-detail-song {
+  padding-top: 10px;
+  height: 80px;
+  display: flex;
+  width: 100%;
+}
+
+.playlist-uploader {
+  flex: 2;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.playlist-uploader img {
+  height: 50px;
+  width: 50px;
+  border-radius: 25px;
+}
+
+.playlist-uploader p {
+  margin-top: 5px;
+}
+
+.playlist-song-info {
+  flex: 8;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+
+.playlist-song-main {
+  padding-top: 5px;
+  text-align: left;
+  flex: 4;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.playlist-song-main #title {
+  font-weight: 800;
+}
+
+.playlist-song-main #artist {
+  color: $lightgray;
+}
+
+.playlist-song-length {
+  height: 100%;
+  flex: 1;
 }
