--- a/app/assets/stylesheets/base/colors.scss
+++ b/app/assets/stylesheets/base/colors.scss
@@ -4,8 +4,8 @@ $pink: #da7071;
 $green: #83B692;
 $lightgreen: #70B77E;
 $lightblue: #129490;
-$gray: #DDF0FF;
+$gray: rgb(160,160,160);
 // $gray: rgb(190,183,183);
-$lightgray: rgb(160,160,160);
+$lightgray: rgb(51,51,51);
 $white: white;
 $red: #CE5374;
