--- a/app/assets/stylesheets/playbar.scss
+++ b/app/assets/stylesheets/playbar.scss
@@ -17,6 +17,11 @@
   flex: 3;
 }
 
+.playbarleft {
+  padding-top: 10px;
+  display: flex;
+}
+
 .playbar span {
   display: block;
   display: flex;
@@ -24,6 +29,7 @@
 
 
 .playbarmid {
+  padding: 0 20px;
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -31,8 +37,33 @@
   font-size: $medium;
 }
 
+.playbar-info {
+  margin-left: 5px;
+  padding-top: 20px;
+  display: flex;
+  flex: 3;
+  flex-direction: column;
+}
+
+.cover-art {
+  flex: 1;
+}
+
+.playbar-info p {
+  margin: 2px 0;
+  font-size: $small;
+}
+
+.playbar-info p #title {
+  color: $white;
+}
+
+.playbar-info p #artist {
+  color: $gray;
+}
 
 .scrobble {
+  padding-top: 20px;
   display: flex;
   justify-content: space-between;
   margin: 0 auto;
@@ -41,16 +72,33 @@
 }
 
 .scrobble p {
+  font-size: 11px;
   display: block;
   flex: 1;
 }
 .scrobble div {
   flex: 9;
-  background-color: red;
 }
 
 .play-control {
+  padding-top: 20px;
   display: flex;
   justify-content: space-around;
+}
 
+.outer-timebar{
+  margin-top: 2px;
+  height: 5px;
+  border-radius: 5px;
+  background-color: $lightgray;
+}
+
+.inner-timebar {
+  width: 0%;
+  height: 100%;
+  border-radius: 5px;
+}
+
+.inner-timebar {
+  background-color: $gray;
 }
