--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,5 +1,6 @@
 @import "base/colors.scss";
 @import "base/font.scss";
+@import "base/grid.scss";
 
 .header {
   width: 100%;
@@ -17,7 +18,7 @@
 
 .title {
   text-align: center;
-  flex: 3;
+  flex: $left;
   color: $purple;
   font-weight: 800;
   font-size: 35px;
@@ -29,12 +30,12 @@
   display: flex;
   align-items: middle;
   text-align: right;
-  flex: 6;
+  flex: $mid;
 }
 
 .rightheader {
   height: 100%;
-  flex: 3;
+  flex: $right;
 }
 
 .account-nav {
