--- a/app/assets/stylesheets/left/left_sidebar.scss
+++ b/app/assets/stylesheets/left/left_sidebar.scss
@@ -2,6 +2,7 @@
 @import "base/colors.scss";
 
 .left {
+  padding-top: 10px;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -58,7 +59,7 @@
   justify-content: flex-start;
   align-items: center;
   border-bottom: rgb(50,50,50) 0.5px solid;
-  font-size: $medium;
+  font-size: 20px;
   padding: 0 15px;
 }
 
