--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -36,6 +36,7 @@
 }
 
 .rightheader {
+  display: none;
   height: 100%;
   flex: $right;
 }
@@ -74,5 +75,11 @@
 .header-button button {
   font-size: $small;
   height: 30px;
+  border-radius: 25px;
+}
+
+.header-pic img {
+  height: 20px;
+  width: 20px;
   border-radius: 25px;
 }
