Add more playlist detail

--- a/app/assets/stylesheets/mid/new_playlist.scss
+++ b/app/assets/stylesheets/mid/new_playlist.scss
@@ -9,6 +9,14 @@
   font-size: $big;
 }
 
+.playlist-error {
+  margin-top: 5px;
+  width: 100%;
+  text-align: left;
+  font-size: $small;
+  color: $red;
+}
+
 
 .new-playlist h2 {
   font-weight: bold;
