--- a/app/assets/stylesheets/mid/browse.scss
+++ b/app/assets/stylesheets/mid/browse.scss
@@ -55,7 +55,7 @@
   margin: 0 auto;
   padding: 20px 0;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   flex-wrap: wrap;
   height: 100%;
 }
