--- a/app/assets/stylesheets/mid/playlist-detail.scss
+++ b/app/assets/stylesheets/mid/playlist-detail.scss
@@ -223,3 +223,13 @@
 .playing {
   color: $purple;
 }
+
+////
+
+#title-edit {
+  color: $white;
+  font-size: $big;
+  outline: none;
+  border-bottom: 1px solid $gray;
+
+}
