--- a/app/assets/stylesheets/loginForm.scss
+++ b/app/assets/stylesheets/loginForm.scss
@@ -24,6 +24,10 @@
   color: rgb(190,183,183);
 }
 
+.login-form-container a {
+  color: $purple;
+}
+
 .login-form-container h1 {
   font-size: $big;
 }
