--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -56,6 +56,10 @@
   text-align: right;
 }
 
+.header-name a:hover {
+  color: $purple;
+}
+
 .header-button {
   text-align: center;
   height: 100%;
