--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -5,6 +5,7 @@
 .header {
   width: 100%;
   height: 45px;
+  padding-bottom: 10px 0;
   vertical-align: middle;
   background-color: black;
   color: white;
@@ -27,6 +28,14 @@
   line-height: 30px;
 }
 
+.title a {
+  color: $purple;
+}
+
+.title a:hover {
+  font-size: 31px;
+}
+
 .midheader {
   padding: 5px;
   display: flex;
@@ -44,7 +53,7 @@
 .account-nav {
   padding: 5px 0;
   text-align: right;
-  align-items: baseline;
+  align-items: center;
   display: flex;
   justify-content: flex-end;
   width: 100%;
@@ -56,6 +65,10 @@
   text-align: right;
 }
 
+.header-name a {
+
+}
+
 .header-name a:hover {
   color: $purple;
 }
@@ -65,6 +78,10 @@
   height: 100%;
   width: 40px;
   margin: 0 10px;
+}
+
+.header-pic img {
+
 }
 
 .header-button:hover {
