--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -4,9 +4,8 @@
 
 .header {
   width: 100%;
-  height: 45px;
-  padding-bottom: 10px 0;
-  vertical-align: middle;
+  height: 50px;
+  padding: 15px 0;
   background-color: black;
   color: white;
   font-size: 20px;
@@ -69,23 +68,19 @@
   text-align: right;
 }
 
-.header-name a {
-
-}
-
 .header-name a:hover {
   color: $purple;
 }
 
 .header-button {
+  display: 'flex';
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   text-align: center;
   height: 100%;
   width: 40px;
-  margin: 0 10px;
-}
-
-.header-pic img {
-
+  // margin: 0 10px;
 }
 
 .header-button:hover {
