Fixed Song Search

--- a/app/assets/stylesheets/left/search_sidebar.scss
+++ b/app/assets/stylesheets/left/search_sidebar.scss
@@ -61,6 +61,12 @@
   font-size: $small;
   flex: 1;
   padding-left: 10px;
+}
+
+.noSongsMatch {
+  color: $gray;
+  font-size: $small;
+  margin: 10px;
 
 }
 
