--- a/app/assets/stylesheets/loginForm.scss
+++ b/app/assets/stylesheets/loginForm.scss
@@ -3,7 +3,7 @@
 @import "base/font.scss";
 
 .splash {
-  background: url("/splash.jpg") no-repeat center center fixed;
+  background: url("/party.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
