--- a/app/assets/stylesheets/loginForm.scss
+++ b/app/assets/stylesheets/loginForm.scss
@@ -3,7 +3,7 @@
 @import "base/font.scss";
 
 .splash {
-  background: url("/party.jpg") no-repeat center center fixed;
+  background: url("/social.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
@@ -13,15 +13,22 @@
 }
 
 .login-form-container {
+
+  width: 500px;
+  height: 100%;
+  background-color: black;
+  opacity: 0.5;
+  padding: 30px;
+  text-align: center;
   position: relative;
   top: 50%;
   transform: translateY(-50%);
   display: flex;
   flex-direction: column;
-  margin: 0 auto;
+  // margin: 0 auto;
   align-items: center;
   justify-content: center;
-  color: rgb(190,183,183);
+  color: white;
 }
 
 .login-form-container a {
@@ -29,7 +36,12 @@
 }
 
 .login-form-container h1 {
-  font-size: $big;
+  font-family: Behance;
+  font-size: 60px;
+}
+.login-form-container h2 {
+  font-size: $medium;
+  margin-top: 10px;
 }
 
 .login-form-container div {
@@ -43,21 +55,17 @@
 }
 
 .login-form input, button {
-  // background-color: $lightgray;
-  // color: $gray;
-
   background-color: transparent;
   border: 1px solid $white;
   color: $white;
   border-radius: 5px;
-
   height: 40px;
   font-size: 1.1em;
-  padding-left: 5px;
+  padding: 5px;
 }
 
 .login-form input:hover, button {
-  font-size: 1.2em;
+  font-size: 1.1em;
 }
 
 .login-form input:focus {
@@ -67,6 +75,10 @@
 
 .login-form p {
   margin-top: 15px;
+}
+
+.login-form a:hover {
+  text-decoration: underline;
 }
 
 .login-form-box li {
@@ -80,14 +92,13 @@
   background-color: transparent;
   border: 1px solid $white;
   color: $white;
+  padding: 7px;
 }
 
 #demo:hover {
   font-size: 1.2em;
 }
 
-#demo button {
-
-  opacity: 0.5;
-  padding-top: 2px;
+.login-form input:hover {
+  font-size: 1.2em;
 }
