--- a/app/assets/stylesheets/loginForm.scss
+++ b/app/assets/stylesheets/loginForm.scss
@@ -79,6 +79,7 @@
 
 .login-form a:hover {
   text-decoration: underline;
+  cursor: pointer;
 }
 
 .login-form-box li {
@@ -97,8 +98,10 @@
 
 #demo:hover {
   font-size: 1.2em;
+  cursor: pointer;
 }
 
 .login-form input:hover {
   font-size: 1.2em;
+  cursor: pointer;
 }
