--- a/app/assets/stylesheets/loginForm.scss
+++ b/app/assets/stylesheets/loginForm.scss
@@ -69,12 +69,16 @@
 }
 
 .login-form input:focus {
-  text-indent: 5px;
+  text-indent: 10px;
   outline-color: white;
 }
 
+.login-form input, button {
+  text-indent: 10px;
+}
+
 .login-form p {
-  margin-top: 15px;
+  margin-top: 20px;
 }
 
 .login-form a:hover {
