--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,13 @@
       ga('send', 'pageview');
 
     </script>
+    <script src="//widget.cloudinary.com/global/all.js" type="text/javascript"></script>
+    <script type="text/javascript">
+      window.CLOUDINARY_OPTIONS = {
+        cloud_name: "<%=ENV['CLOUD_NAME']%>",
+        upload_preset: "<%= ENV['UPLOAD_PRESET'] %>"
+      };
+    </script>
   </head>
 
   <body>
