--- a/app/assets/stylesheets/left/search_sidebar.scss
+++ b/app/assets/stylesheets/left/search_sidebar.scss
@@ -121,7 +121,7 @@
   text-align: left;
   margin-left: 5px;
   padding: 2px 0;
-  min-width: 0
+  min-width: 0;
 }
 
 .sart {
@@ -145,9 +145,7 @@
   min-width: 0;
 }
 
-.stitle > p {
 
-}
 
 .sartist {
 
